Refactored integrated service to use rest client